# Rubixcubesolver

./: CMakeLists.txt  RubiksCube1Darray.cpp  RubiksCube3Darray.cpp  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1Darray.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
